# ekumen_technical_exercise

./: CMakeLists.txt  README.md  package.xml
action/: Turtle.action
cfg/: turtlesim_velocity.cfg
include/ekumen_technical_exercise/: turtle_client.hpp  turtle_server.hpp
launch/: turtlesim_client.launch  turtlesim_complete.launch  turtlesim_demo.launch  turtlesim_server.launch  turtlesim_test.launch
path/: complex-star.yaml  convex.yaml  equilateral.yaml  heptagon.yaml  hexagon.yaml  line.yaml  square.yaml  star.yaml
src/: pause_turtle.cpp  resume_turtle.cpp  turtle_client.cpp  turtle_server.cpp
src/web_page/: style.css  turtle_webpage.html
